--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
+
 <body>
     <header class="cabeçalho">
-        <span class="cabeçalho_menu-hamburguer"</span>
-            <omg src="logo.svg" alt="logo do AluraBooks"
+        <spam class="cabeçalho_menu-hamburguer"></spam>
+        <img src="logo.svg" alt="Logo do AluraBooks">
+        <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos"></a>
+        <a href="#"><img src="compras.svg" alt=" Meu carrinho de compra"></a>
+        <a href="#"><img src="Usuario.svg" alt="Meu Perfil"></a>
     </header>
 </body>
 </html>
