--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="cabeçalho">
-        <spam class="cabeçalho_menu-hamburguer"></spam>
+        <span class="cabeçalho_menu-hamburguer"></spam>
         <img src="logo.svg" alt="Logo do AluraBooks">
         <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos"></a>
         <a href="#"><img src="compras.svg" alt=" Meu carrinho de compra"></a>
