--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <header class="cabeçalho">
-        <span class="cabeçalho_menu-hamburguer"></spam>
-        <img src="logo.svg" alt="Logo do AluraBooks">
-        <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos"></a>
-        <a href="#"><img src="compras.svg" alt=" Meu carrinho de compra"></a>
-        <a href="#"><img src="Usuario.svg" alt="Meu Perfil"></a>
+        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+                <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
+                <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
     </header>
 </body>
 </html>
