--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AluraBooks</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AluraBooks</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header class="cabeçalho">
-        <div class="container"> 
-            <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
-                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-            </label>
-             <ul class="lista-menu">
+  <header class="cabeçalho">
+    <div class="container">
+      <input type="checkbox" id="menu" class="container__botao" />
+      <label for="menu">
+        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+      </label>
+      <ul class="lista-menu">
         <li class="lista-menu__titulo">Categorias</li>
         <li class="lista-menu__item">
           <a href="#" class="lista-menu__link">Programação</a>
@@ -33,13 +34,14 @@
           <a href="#" class="lista-menu__link">Design & UX</a>
         </li>
       </ul>
-            <img src="Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
-        </div>
-        <div class="container">
-            <a href="#"><img src="Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-            <a href="#"><img src="Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
-        </div>
-    </header>
+      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+    </div>
+    <div class="container">
+      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
+      <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+    </div>
+  </header>
 </body>
+
 </html>
