--- a/index.html
+++ b/index.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AluraBooks</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AluraBooks</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 
 <body>
-  <header class="cabeçalho">
-    <div class="container">
-      <input type="checkbox" id="menu" class="container__botao" />
-      <label for="menu">
-        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-      </label>
-      <ul class="lista-menu">
-        <li class="lista-menu__titulo">Categorias</li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Infraestrutura</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Design & UX</a>
-        </li>
-      </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+    <header class="cabeçalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container_botao">
+            <label for="menu">
+                <span class="cabeçalho_menu-hamburguer"></span>
+            </label>
+            <ul>
+                <li class="lista-menu_titulo">Categorias</li>
+                
+                <li class="lista-menu_item">Programaçao
+                </li>
+                <a href="#" class="lista-menu_item">Programaçao</a>
+                <li class="lista-menu_item">Front-end</li>
+                <a href="#" class="lista-menu_item">Front-end</a>
+                <li class="lista-menu_item">Infraestrutura</li>
+                <a href="#" class="lista-menu_item">Infraestrutura</a>
+                <li class="lista-menu_item">Business</li>
+                <a href="#" class="lista-menu_item">Business</a>
+                <li class="lista-menu_item">Design & Ux</li>
+                <a href="#" class="lista-menu_item">Design & Ux</a>
+            </ul>
+        <span class="cabeçalho_menu-hamburguer container_imagem"></span>
+        <img src="Logo.svg" alt="Logo do AluraBooks">
     </div>
     <div class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-      <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
-      <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+        <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos"> </a>
+        <a href="#"><img src="Compras.svg" alt="Carrinho de Compra"> </a>
+        <a href="#"><img src="Usuario.svg" alt="Meu Perfil"> </a>
     </div>
-  </header>
+    </header>
 </body>
-
 </html>
